--- a/PSS/wwwroot/css/IndexNew.css
+++ b/PSS/wwwroot/css/IndexNew.css
@@ -1,5 +1,8 @@
 /* Stuff for just Index.razor */
 /* This stuff is for sure not used elsewhere */
+* {
+    user-select: none;
+}
 
 h1 {
     color: white;
@@ -23,29 +26,29 @@ h1 {
     cursor: pointer;
 }
 
-#mainDiv .thumbnail .unchecked {
+#mainDiv .thumbnail span {
     opacity: 0;
     height: 24px;
     width: 24px;
     position: absolute;
-    box-sizing: border-box;
     color: #fff;
-    outline: none;
     margin-top: 8px;
     margin-left: 8px;
-    fill-opacity: .54;
     transition: 0.3s;
-    transition-property: opacity, fill-opacity;
 }
 
-#mainDiv .thumbnail:hover .unchecked { /* Show checkbox on hover */
+#mainDiv .thumbnail:hover span.unchecked { /* Show checkbox on hover */
     opacity: 0.42;
 }
 
-#mainDiv .thumbnail .unchecked:hover { /* Make it 100% opaque */
+#mainDiv .thumbnail span.unchecked:hover { /* Make it 100% opaque */
     opacity: 1;
 }
 
+#mainDiv .thumbnail .checked {
+    color: #009FFF;
+    opacity: 1;
+}
 
 #mainDiv .thumbnail img {
     height: 200px;
