--- a/PSS/wwwroot/css/IndexNew.css
+++ b/PSS/wwwroot/css/IndexNew.css
@@ -4,6 +4,33 @@
     user-select: none;
 }
 
+header {
+    display: flex;
+    flex-direction: row-reverse;
+    align-content: center;
+    position: fixed;
+    height: 54px;
+    left: 146px;
+    right: 0;
+    padding-top: 4px;
+    padding-right: 100px;
+}
+
+header button {
+    color: white;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    border: none;
+    background: none;
+    margin-right: 6px;
+}
+
+header button:hover {
+    background-color: rgba(211, 211, 211, 0.1);
+    cursor: pointer;
+}
+
 h1 {
     color: white;
     font-family: 'Product Sans', sans-serif;
@@ -20,6 +47,7 @@ h1 {
     flex-wrap: wrap;
     position: absolute;
     left: 145px;
+    top: 60px;
 }
 
 #mainDiv .thumbnail {
