--- a/PSS/wwwroot/css/IndexNew.css
+++ b/PSS/wwwroot/css/IndexNew.css
@@ -31,6 +31,15 @@ header button:hover {
     cursor: pointer;
 }
 
+header > span {
+    font-family: 'Product Sans', sans-serif;
+    font-size: 20px;
+    color: white;
+    position: absolute;
+    left: 10px;
+    top: 18px;
+}
+
 h1 {
     color: white;
     font-family: 'Product Sans', sans-serif;
