--- a/PSS/Pages/Index.razor
+++ b/PSS/Pages/Index.razor
@@ -10,8 +10,8 @@
         <button><span class="material-icons-outlined">archive</span></button>
         <button><span class="material-icons-outlined">star_outline</span></button>
         <button><span class="material-icons-outlined">collections</span></button>
-        <span style="visibility: @headerVis">@selectedItems.Count selected</span>
-        <button><span class="material-icons-outlined">close</span></button>
+        <span id="selectedAmtText" style="visibility: @headerVis">@selectedItems.Count selected</span>
+        <button id="clearBtn"><span class="material-icons-outlined">close</span></button>
     </header>
 
     if (mediaList.Count == 0)
