--- a/PSS/Pages/Index.razor
+++ b/PSS/Pages/Index.razor
@@ -11,7 +11,7 @@
         <button><span class="material-icons-outlined">star_outline</span></button>
         <button><span class="material-icons-outlined">collections</span></button>
         <span id="selectedAmtText" style="visibility: @headerVis">@selectedItems.Count selected</span>
-        <button id="clearBtn"><span class="material-icons-outlined">close</span></button>
+        <button id="clearBtn" @onclick="ClearChecks"><span class="material-icons-outlined">close</span></button>
     </header>
 
     if (mediaList.Count == 0)
@@ -41,7 +41,6 @@
     {
         selectedItems = new List<Guid>(); //Reset on page load/refresh
         headerVis = "hidden";
-        
     }
 
     [Inject] //https://code-maze.com/how-to-call-javascript-code-from-net-blazor-webassembly/
@@ -54,7 +53,15 @@
             selectedItems.Remove(uuid);
         else
             selectedItems.Add(uuid);
-        
+
         headerVis = selectedItems.Count > 0 ? "visible" : "hidden";
+    }
+
+    private async Task ClearChecks()
+    {
+        foreach (Guid uuid in selectedItems)
+            await JSRuntime.InvokeAsync<string>("removeCheck", uuid);
+        selectedItems.Clear();
+        headerVis = "hidden";
     }
 }
