--- a/PSS/wwwroot/css/IndexNew.css
+++ b/PSS/wwwroot/css/IndexNew.css
@@ -101,3 +101,20 @@ h1 {
     margin-right: 3px;
     margin-top: 3px;
 }
+
+#albumSelector { /* How to center a div: https://stackoverflow.com/a/23703655 */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    background-color: green;
+    width: 440px;
+    height: 500px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    z-index: 999;
+}
