add close button and add to text

--- a/PSS/Pages/Index.razor
+++ b/PSS/Pages/Index.razor
@@ -16,6 +16,8 @@
     
     <div id="albumSelector">
         @*TODO: when this shown either just have onabort simple x button, and/or when click outside div, close. gonna need a confirm btn too*@
+        <button id="closeBtn"><span class="material-icons-outlined">close</span></button>
+        <span id="addToText">Add to</span>
     </div>
 
     if (mediaList.Count == 0)
