fix some minor CSS things

--- a/PSS/wwwroot/css/IndexNew.css
+++ b/PSS/wwwroot/css/IndexNew.css
@@ -115,8 +115,8 @@ h1 {
     top: 50%;
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-    /*background-color: black;*/
-    background-color: green;
+    background-color: black;
+    /*background-color: green;*/
     width: 440px;
     height: 500px;
     overflow-y: scroll;
@@ -126,30 +126,30 @@ h1 {
     padding-right: 2px;
 }
 
-#albums {
-    position: absolute;
-    border: 2px solid white;
-    padding-right: 2px;
-    left: 50%;
-    top: 55%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    width: 405px;
-    height: 420px;
-    overflow-y: scroll;
-}
-
 #addToText {
     color: white;
     position: absolute;
     top: 20px;
-    left: 15px;
+    left: 17px;
 }
 
 #closeBtn {
     position: absolute;
     top: 5px;
     right: 5px;
+}
+
+#albums {
+    position: absolute;
+    border: 1px solid white;
+    padding-right: 2px;
+    left: 50%;
+    top: 54%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    width: 405px;
+    height: 435px;
+    overflow-y: scroll;
 }
 
 .album {
