--- a/PSS/wwwroot/css/IndexNew.css
+++ b/PSS/wwwroot/css/IndexNew.css
@@ -116,7 +116,6 @@ h1 {
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     background-color: black;
-    /*background-color: green;*/
     width: 440px;
     height: 500px;
     overflow-y: scroll;
@@ -130,13 +129,19 @@ h1 {
     color: white;
     position: absolute;
     top: 20px;
-    left: 17px;
+    left: 18px;
 }
 
 #closeBtn {
     position: absolute;
     top: 5px;
     right: 5px;
+}
+
+#confirmBtn {
+    position: absolute;
+    top: 5px;
+    right: 60px;
 }
 
 #albums {
@@ -148,7 +153,7 @@ h1 {
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     width: 405px;
-    height: 435px;
+    height: 420px;
     overflow-y: scroll;
 }
 
