--- a/PSS/Pages/Index.razor
+++ b/PSS/Pages/Index.razor
@@ -70,13 +70,13 @@
     [Inject] //https://code-maze.com/how-to-call-javascript-code-from-net-blazor-webassembly/
     public IJSRuntime JSRuntime { get; set; }
 
-    private async Task ToggleCheck(string uuid)
+    private async Task ToggleCheck(string id) //id = string path
     {
-        string newClass = await JSRuntime.InvokeAsync<string>("toggleCheck", uuid);
+        string newClass = await JSRuntime.InvokeAsync<string>("toggleCheck", id);
         if (newClass.Contains("unchecked"))
-            selectedItems.Remove(uuid);
+            selectedItems.Remove(id);
         else
-            selectedItems.Add(uuid);
+            selectedItems.Add(id);
 
         headerVis = selectedItems.Count > 0 ? "visible" : "hidden";
     }
