Start trash page

--- a/PSS/Shared/NavMenu.razor
+++ b/PSS/Shared/NavMenu.razor
@@ -4,6 +4,6 @@
     <button onclick="location.href='upload'" class="nav_btn"><span class="material-icons-outlined">&#xe2c3;</span><span class="nav_btn_text">Upload</span></button>
     <button onclick="location.href='apply-upload'" class="nav_btn"><span class="material-icons-outlined">&#xf06f;</span><span class="nav_btn_text">Starred</span></button>
     <button onclick="location.href='search'" class="nav_btn"><span class="material-icons-outlined">&#xe8b6;</span><span class="nav_btn_text">Search</span></button>
-    <button onclick="location.href='test'" class="nav_btn"><svg width="24px" height="24px" class="material-icons-outlined" style="fill: white;" viewBox="0 0 24 24"><path d="M15 4V3H9v1H4v2h1v13c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V6h1V4h-5zm2 15H7V6h10v13zM9 8h2v9H9zm4 0h2v9h-2z"></path></svg><span class="nav_btn_text">Trash</span></button>
+    <button onclick="location.href='trash'" class="nav_btn"><svg width="24px" height="24px" class="material-icons-outlined" style="fill: white;" viewBox="0 0 24 24"><path d="M15 4V3H9v1H4v2h1v13c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V6h1V4h-5zm2 15H7V6h10v13zM9 8h2v9H9zm4 0h2v9h-2z"></path></svg><span class="nav_btn_text">Trash</span></button>
     <button onclick="location.href='settings'" class="nav_btn"><span class="material-icons-outlined">&#xe8b8;</span><span class="nav_btn_text">Settings</span></button>
 </nav>
