--- a/PSS/Pages/Index.razor
+++ b/PSS/Pages/Index.razor
@@ -96,12 +96,11 @@
     {
         foreach (string path in selectedItems.ToList()) //https://stackoverflow.com/a/604843
         {
-            DeleteItem(path);
+            MoveToTrash(path);
             headerVis = "hidden";
         }
         await ClearChecks();
         mediaList = LoadMediaTable();
-        // StateHasChanged();
     }
 
     //Functions for album stuff
