--- a/PSS/Pages/Trash.razor
+++ b/PSS/Pages/Trash.razor
@@ -1,5 +1,6 @@
-﻿@page "/trash"
+@page "/trash"
 @using static PSS.Backend.Connection
+@using System.IO
 
 <link href="css/Trash.css" rel="stylesheet"/>
 
@@ -8,8 +9,8 @@
         <button class="iconBtn" id="clearBtn" style="visibility: @(selectedItems.Count == 0 ? "hidden" : "visible")" @onclick="ClearChecks"><span class="material-icons-outlined">close</span></button>
         <span id="selectedAmtText" style="visibility: @(selectedItems.Count == 0 ? "hidden" : "visible")">@selectedItems.Count selected</span>
         <div>
-            <button class="textBtn"><span class="material-icons-outlined">restore_from_trash</span><span>@(selectedItems.Count == 0 ? "Restore ALL" : "Restore Selected")</span></button>
-            <button class="textBtn"><span class="material-icons-outlined">delete_forever</span><span>@(selectedItems.Count == 0 ? "Delete ALL" : "Delete Selected")</span></button>
+            <button class="textBtn" @onclick="RestoreBtnClick"><span class="material-icons-outlined">restore_from_trash</span><span>@(selectedItems.Count == 0 ? "Restore ALL" : "Restore Selected")</span></button>
+            <button class="textBtn" @onclick="DeleteBtnClick"><span class="material-icons-outlined">delete_forever</span><span>@(selectedItems.Count == 0 ? "Delete ALL" : "Delete Selected")</span></button>
         </div>
     </header>
     
@@ -33,7 +34,7 @@
 
 @code {
     private static List<MediaRow> mediaTrashList;
-    private static List<string> selectedItems; //Stores all items user selected. If unchecked, removed from list.
+    private static List<string> selectedItems; //Stores all items (paths) user selected. If unchecked, removed from list.
 
     protected override void OnInitialized()
     {
@@ -57,6 +58,23 @@
     {
         foreach (string item in selectedItems)
             await JSRuntime.InvokeAsync<string>("removeCheck", item);
+        selectedItems.Clear();
+    }
+    private async Task DeleteBtnClick()
+    {
+        //Delete ALL
+        if (selectedItems.Count == 0)
+            foreach (MediaRow item in mediaTrashList) PermDeleteItem(item.path);
+        else //Delete selected
+        {
+            foreach (string item in selectedItems)
+            {
+                await JSRuntime.InvokeAsync<string>("removeCheck", item);
+                PermDeleteItem(item);
+            }
+        }
+        await ClearChecks();
+        mediaTrashList = LoadMediaTrashTable();
         selectedItems.Clear();
     }
 }
