--- a/PSS/Pages/Index.razor
+++ b/PSS/Pages/Index.razor
@@ -57,7 +57,7 @@
     private static List<MediaRow> mediaList;
     private static List<string> selectedItems; //Stores all items (paths) user selected. If unchecked, removed from list.
     private static List<bool> checkedAlbums;
-    private static readonly List<Album> albums = GetAlbumNames();
+    private static readonly List<Album> albums = GetAlbumsTable();
 
     protected override void OnInitialized()
     {
